# ChurnOps

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  PROJECT_DOCUMENTATION.md  README.md  docker-compose.yml  export_model.py  pyproject.toml  pytest.txt  requirements-api.txt  requirements.txt
.github/workflows/: cd.yml  ci.yml
configs/: config.yaml
configs/data/: banking.yaml  ecommerce.yaml  gaming.yaml  healthcare.yaml  hospitality.yaml  ott.yaml  saas.yaml  telco.yaml
configs/model/: catboost.yaml  lightgbm.yaml  logistic_regression.yaml  neural_net.yaml  random_forest.yaml  xgboost.yaml
configs/monitoring/: drift.yaml
configs/training/: training.yaml
data/reference/: test_batch_telco.csv
docs/: API_REFERENCE.md  ARCHITECTURE.md  DATA_GENERATION_EXPLAINED.md  DOCKER_GUIDE.md  model_card.md
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.jsx  DomainContext.jsx  api.js  index.css  main.jsx
models/preprocessors/: banking_engineer.joblib  banking_preprocessor.joblib  ecommerce_engineer.joblib  ecommerce_preprocessor.joblib  gaming_engineer.joblib  gaming_preprocessor.joblib  healthcare_engineer.joblib  healthcare_preprocessor.joblib  hospitality_engineer.joblib  hospitality_preprocessor.joblib  ott_engineer.joblib  ott_preprocessor.joblib  saas_engineer.joblib  saas_preprocessor.joblib  telco_engineer.joblib  telco_preprocessor.joblib
scripts/: generate_8_domains.py  orchestrate_all.ps1  run_training.py  run_tuning.py  test_inference.py  test_pipeline.py
src/: __init__.py
src/api/: dependencies.py  main.py  middleware.py  schemas.py
src/data/: __init__.py  features.py  ingest.py  preprocess.py  validate.py
src/models/: __init__.py  demo_model.py  evaluate.py  explain.py  hyperparameter_tuning.py  predict.py  registry.py  train.py
src/monitoring/: __init__.py  alerts.py  drift_detector.py  metrics_collector.py  performance_tracker.py
src/utils/: __init__.py  config.py  helpers.py  logging.py
streamlit_app/: app.py
streamlit_app/pages/: 01_predict.py  02_model_comparison.py  03_drift_monitor.py  04_explainability.py  05_batch_predict.py
tests/: __init__.py  conftest.py
tests/integration/: test_api.py
tests/unit/: test_data_ingest.py  test_demo_model.py  (+5 more)
tmp/: gen_test_csv.py
(+38 files in other folders)
